--- a/6dejaar/vectoren/vct_begrip.tex
+++ b/6dejaar/vectoren/vct_begrip.tex
@@ -9,9 +9,9 @@
     \xmsource\xmuitleg
 
 
-In de fysica wordt de natuur vaak beschreven met grootheden. Die kan men opsplitsen in twee categorieën: scalaire grootheden (scalars) en vectoriële grootheden (vectoren). 
-Het onderscheid ertussen en de omgang met beiden zijn ontzettend belangrijk in fysica.
+In de fysica wordt de natuur beschreven met grootheden die men opsplitst in twee categorieën: scalaire grootheden (scalars) en vectoriële grootheden (vectoren). 
 Grootheden die de vraag kunnen oproepen: “Naar waar gericht?” zijn vectoren, grootheden waarbij die vraag geen antwoord heeft, zijn scalars. 
+Dit onderscheid en een correcte omgang met beiden zijn ontzettend belangrijk in fysica.
 
 
 Voorbeeld: een helikopter vliegt met een snelheid van 40 km/h. 
@@ -22,11 +22,22 @@ Stel het zwembadwater heeft een temperatuur van 27°C.
 Vraag: “Naar waar?” Antwoord: “Hier is geen zinnig antwoord op.” 
 Temperatuur is dus een scalar.
 
-Een vectoriële grootheid heeft drie variabele kenmerken: grootte, richting en zin. 
-Voorbeeld: de helikopter vliegt aan 40 km/h, horizontaal en naar het zuiden. 
+Een vectoriële grootheid heeft drie variabele kenmerken: grootte, richting en zin. %aangrijpingspunt?
+Voorbeeld: de helikopter vliegt aan 40 km/h, horizontaal en naar het zuiden. % horizontaal?
 Een scalaire grootheid heeft slechts één kenmerk: de grootte (waarin soms ook een teken vervat zit). 
 Voorbeeld: een sneeuwbal heeft een temperatuur van -10°C.
-De plaats waarop de vector van toepassing is, noemt men het aangrijpingspunt van de vector.
+De plaats waar de vector aangrijpt, noemt men het aangrijpingspunt van de vector. %naar volgende activity? 
+
+
+\begin{remark}
+Het onderscheidt tussen scalar en vector is in de eerste plaats een verschil in \textit{naamgeving}.
+Een scalar kan immers bekeken worden als een vector met slechts één component.
+
+Zo kan men zeggen dat de temperatuur in graden gelijk is aan de scalar '\(27\)' of gegeven wordt door de vector \(\vec{t} = (27) \) met slechts één component. 
+\end{remark}
+
+
+% TODO: MOET ER NOG IETS GEZEGD WORDEN OVER VRIJE VECTOREN? 
 
 
 	
