meer opgekuiste versie van oefeningen, vraagstukken vrije val bestand toegevoegd

--- a/1Doef_local.tex
+++ b/1Doef_local.tex
@@ -49,8 +49,9 @@
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_oef.tex}
-\activitychapter{6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex}
-\activitychapter{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken_valbeweging.tex}
 
 
 % \part{Tweedimensionale bewegingen}
