--- a/6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex
+++ b/6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 	\author{Bart Lambregs}
-	\xmtitle{Oefeningen}{}
+	\xmtitle{Denkvragen}{}
     \xmsource\xmuitleg
 
 \begin{exercise}
@@ -46,6 +46,16 @@
 	\begin{oplossing}
 		$x=t(t-5)(t+2)$
 	\end{oplossing}
+\end{exercise}
+
+\begin{exercise}
+    Een puntmassa voert een eenparig veranderlijke rechtlijnige beweging uit over het tijdsinterval [\SI{0}{s},\SI{2}{s}] met beginsnelheid en beginpositie van respectievelijk \SI{0}{m/s} en \SI{0}{m}. De versnelling is \SI{3}{m/s^2}. Waarom kan je onmiddellijk stellen dat als in het tijdsinterval de tijd half om is, de puntmassa nog niet halfweg is?
+    \begin{enumerate}
+        %\item Breng, zoals de opgelegde werkwijze bij het oplossen van vraagstukken vereist, zowel het gegeven als het gevraagde (hier het te bewijzen) in symbolen.
+        \item Leg in woorden uit op welke manier je onmiddellijk kan inzien dat het te bewijzen juist is.
+        \item Controleer het te bewijzen via de numerieke waarden van dit vraagstuk.
+        \item Geef nu het bewijs.
+    \end{enumerate}
 \end{exercise}
 
 \end{document}
