--- a/semester1.tex
+++ b/semester1.tex
@@ -61,15 +61,15 @@
 \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
 
 
-\part{De beginselen van Newton}
+\part{De wetten van Newton}
 
 \activitychapter{6dejaar/dynamica/nwtn_intro.tex}
 \activitychapter{6dejaar/dynamica/nwtn_traagheid.tex}
 \activitychapter{6dejaar/dynamica/nwtn_tweede_beginsel.tex}
 \activitychapter{6dejaar/dynamica/nwtn_derde_beginsel.tex}
-%%%\activitychapter{6dejaar/dynamica/nwtn_oef.tex} = te verwijderen en te vervangen door denkvragen en vraagstukken
-\activitychapter{6dejaar/dynamica/nwtn_denkvragen.tex}
-\activitychapter{6dejaar/dynamica/nwtn_vraagstukken.tex}
+\activitychapter{6dejaar/dynamica/nwtn_oefeningen.tex} 
+\activitysection{6dejaar/dynamica/nwtn_denkvragen.tex}
+\activitysection{6dejaar/dynamica/nwtn_vraagstukken.tex}
 % \activitychapter{6dejaar/nwtn_oplossingsstrategie.tex}
 % \activitychapter{6dejaar/nwtn_historische_uitwijding.tex}
 
