--- a/mechanica_local.tex
+++ b/mechanica_local.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Test xourse (mechanica_local)}{}  
+    \xmtitle{Test xourse (mechanica local)}{}  
  
 
     
