update begrippen vincent

--- a/6dejaar/kinematica/knmtc_bgrppn_snelheid.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_snelheid.tex
@@ -1,15 +1,19 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
-\addPrintStyle{..}
+\addPrintStyle{../..}
 
 \begin{document}
-	\author{Bart Lambregs}
+	\author{Bart Lambregs,Vincent Gellens}
 	\xmtitle{De snelheid}{}
     \xmsource\xmuitleg
 
+Een voorwerp heeft snelheid als het beweegt, er is een verandering van de positie in de tijd.
+De snelheidsvector grijpt altijd aan op het voorwerp en wijst in de zin van de ogenblikkelijke beweging, rakend aan de baan dus.
+In animaties lijkt het alsof de snelheidsvector aan de positievector "trekt". Bezie hiervoor animaties te vinden op https://www.hansbekaert.be/fysica/new/applets6.html.
 
-\subsection*{Gemiddelde snelheid}
+
+	\subsection*{Gemiddelde snelheid bij ééndimensionale bewegingen}
 
 % gemiddelde snelheid als je een rondje loopt is nu nul; dat moet miss benoemd worden 
 
@@ -29,7 +33,7 @@ In de figuur is de gemiddelde snelheid van de auto tussen de tijdstippen $t_1$ e
 
 
 
-\subsection*{Ogenblikkelijke snelheid}
+\subsection*{Ogenblikkelijke snelheid bij ééndimensionale bewegingen}
 
 De gemiddelde snelheid \(\overline{v}\) is enkel gedefinieerd \textit{tussen} twee posities \(x_1\) en \(x_2\). De plaatsfunctie \(x(t)\) kent voor elk tijdstip \(t\) aan een puntmassa een positie \(x\) toe. Op dezelfde manier zou je op elk tijdstip de snelheid willen kennen. 
 
@@ -62,6 +66,16 @@ De functie $v(t)$ geeft op elk moment $t$ de snelheid $v(t)$.
 
 
 Grafisch kan je de afgeleide terugvinden als de richtingscoöefficiënt van de raaklijn. In een $x-t$ grafiek (de grafiek van de functie $x(t)$, $x$ in functie van $t$) vind je  de snelheid als de richtingscoöefficiënt van de raaklijn in het beschouwde punt. 
+
+\begin{image}
+\includegraphics[width=0.8\textwidth]{snelheid1D}
+
+\end{image}
+
+\begin{image}
+\includegraphics[width=0.8\textwidth]{overzichtsnelheid1D}
+
+\end{image}
 
 \begin{remark}
 	Het woord 'ogenblikkelijk' mag je weglaten. Wanneer we het over snelheid hebben, bedoelen we vanaf nu steeds ogenblikkelijke snelheid.
