update oef en bewerkingen

--- a/6dejaar/vectoren/vct_oef.tex
+++ b/6dejaar/vectoren/vct_oef.tex
@@ -271,7 +271,7 @@ Vanop dezelfde middenstip vertrekken twee spelers, één wandelt \(9\) m evenwij
 	\end{exercise}
 
 \begin{exercise}
-	Toon aan dat \( \| \vec{a} - \vec{b} = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \cdot \|\vec{a}\| \cdot \|\vec{b}\| \cdot \cos(\alpha)\) met \(\alpha\) de hoek tussen \(\vec{a}\) en \(\vec{b}\). 
+	Toon aan dat \( \| \vec{a} - \vec{b} \| = \|\vec{a}\|^2 + \|\vec{b}\|^2 - 2 \cdot \|\vec{a}\| \cdot \|\vec{b}\| \cdot \cos(\alpha)\) met \(\alpha\) de hoek tussen \(\vec{a}\) en \(\vec{b}\). 
 \end{exercise}
 
 \begin{exercise}
