--- a/semester1.tex
+++ b/semester1.tex
@@ -23,11 +23,14 @@
 
 \part{Vectoren}
 
-\activitychapter{6dejaar/vectoren/vct_inleiding.tex}
+% \activitychapter{6dejaar/vectoren/vct_inleiding.tex}
+\activitychapter{6dejaar/vectoren/vct_notatie.tex}
+
 \activitychapter{6dejaar/vectoren/vct_begrip.tex}
 \activitychapter{6dejaar/vectoren/vct_notatie.tex}
 \activitychapter{6dejaar/vectoren/vct_bewerkingen.tex}
 \activitychapter{6dejaar/vectoren/vct_oef.tex}
+
 
 
 
