rename mechanica_local.tex naar test.tex

--- a/test.tex
+++ b/test.tex
@@ -12,7 +12,7 @@
 
 \begin{document}
 %	\setcounter{tocdepth}{2}
-    \xmtitle{Test xourse (mechanica local)}{}  
+    \xmtitle{Test course (test.tex)}{}  
  
 
     
