--- a/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
+++ b/6dejaar/kinematica/knmtc_bgrppn_referentiestelsel.tex
@@ -1,4 +1,5 @@
 \documentclass{ximera}
+
 \input{../../preamble}
 
 \addPrintStyle{../..}
@@ -31,7 +32,7 @@ Voor een toeschouwer in het publiek staan beide referentiestelsels stil, bijgevo
 De kolibri in onderstaande foto blijft ter plekke in de lucht hangen onder de bloem. Geef twee referentiestelsels waarin deze vogel \textbf{niet} stilstaat. 
 
 \begin{image}
-	\includegraphics[width=0.1\textwidth]{kolibri}
+	\includegraphics[0.4\textwidth]{kolibri}
 % Bron: https://unsplash.com/photos/green-and-black-humming-bird-flying-p-DDK9lOmmE 
 % AFBEELDING KLEINER? LUKT ME NIET
 \end{image}
