nog enkele oefeningen

--- a/6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex
+++ b/6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex
@@ -45,6 +45,21 @@
     \end{enumerate}
 \end{exercise}
 
+% Vraagstukken die focussen op wiskundige aspecten
+
+\begin{exercise}
+	Een massa vertrekt vanuit rust om een eenparig versnelde rechtlijnige beweging uit te voeren. Als haar beginpositie \SI{0}{m} is, welke van de volgende betrekkingen is dan juist?
+	\begin{multipleChoice}
+		\choice{$t=\frac{x}{2v}$}
+		\choice[correct]{$t=\frac{2x}{v}$}
+		\choice{$t=\frac{v}{2x}$}
+		\choice{$t=\frac{2v}{x}$}
+	\end{multipleChoice}
+\end{exercise}
+
+
+
+
 % Denkvragen over grafische voorstellingen
 
 \begin{exercise}
@@ -65,6 +80,23 @@
 \end{exercise}
 
 % Denkvragen over de valbeweging
+
+\begin{exercise}
+	Kan de bewegingsrichting van een voorwerp omkeren terwijl de versnelling gelijk blijft? Zo ja, geef dan een voorbeeld. Zo nee, leg uit waarom dat niet kan.
+	\begin{oplossing}
+		Ja, dat kan. Als je een bal opwerpt zal op het hoogste punt de bewegingszin omdraaien terwijl de versnelling gelijk blijft. We kunnen immers een verticale worp modelleren als een EVRB. Kiezen we de referentieas om de beweging te beschrijven omhoog, dan is de snelheid van de bal positief bij het naar boven bewegen en negatief wanneer hij naar beneden komt, terwijl de verandering van de snelheid in de tijd (de versnelling) systematisch gelijk is aan de negatieve valversnelling.
+	\end{oplossing}
+\end{exercise}
+\todo{Eventueel uitleg aanpassen naar de situatie van een wagentje op een helling. Dan is deze vraag niet gekoppeld aan de context van een valbeweging, die later behandeld wordt.}
+
+\begin{exercise}
+	Kan een voorwerp dat een positieve versnelling heeft een negatieve snelheid hebben? Kan het omgekeerde ook?% Licht je antwoord toe.
+	\begin{oplossing}
+		Ja, dat kan. Neem bijvoorbeeld een voorwerp dat je verticaal omhoog gooit. Als je de referentieas waarmee je de beweging wil beschrijven verticaal naar benden kiest, zal de versnelling van de beweging positief zijn en de snelheid negatief. De snelheid is negatief omdat je tegengesteld aan de as beweegt en de versnelling is positief omdat de snelheid minder negatief wordt.
+
+		Het omgekeerde kan ook, draai gewoon de referentieas om.
+	\end{oplossing}
+\end{exercise}
 
 \begin{exercise}
 	Een lichaam wordt verticaal omhoog geworpen. De referentieas is omhoog gericht. Welke van de volgende $v(t)$-diagrammen geeft dan het juiste verloop van de snelheid weer?
